scraper tool changes